--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "tjudge-cli"
-version = "0.2.0"
+version = "1.0.0"
 edition = "2024"
 authors = ["Kirill Zhikharev <zhikh.k@gmail.com>"]
+license = "MIT"
 
 [dependencies]
 clap = { version = "4.5.54", features = ["derive"] }
